Update admin controller

--- a/src/main/resources/templates/admin-form.html
+++ b/src/main/resources/templates/admin-form.html
@@ -113,7 +113,7 @@
             var xhttp = new XMLHttpRequest();
 
             xhttp.onreadystatechange = getResponse;
-            xhttp.open("GET", "/admin/form/getForms", true);
+            xhttp.open("GET", "/admin/forms", true);
             xhttp.send();
 
         }
